--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/jstapels/mpu6050.git"
   },
   "dependencies": {
-    "i2c": "*"
+    "raspi-i2c": "^6.2.2"
   },
   "keywords": [
     "Node.js",
